@@ -1,18 +1,17 @@
 package org.lflang.tests.compiler;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-
 import org.lflang.generator.MixedRadixInt;
 
 public class MixedRadixIntTest {
     
     // Constants used many times below.
-    List<Integer> radixes = new ArrayList<Integer>(List.of(2, 3, 4, 5));
-    List<Integer> digits = new ArrayList<Integer>(List.of(1, 2, 3, 4));
+    List<Integer> radixes = Arrays.asList(2, 3, 4, 5);
+    List<Integer> digits = Arrays.asList(1, 2, 3, 4);
 
     @Test
     public void create() throws Exception {
@@ -20,21 +19,21 @@ public class MixedRadixIntTest {
         Assertions.assertEquals("1%2, 2%3, 3%4, 4%5", num.toString());
         Assertions.assertEquals(1 + 2*2 + 3*6 + 4*24, num.get());
         
-        List<Integer> altDigits = new ArrayList<Integer>(List.of(1, 2, 1));
+        List<Integer> altDigits = List.of(1, 2, 1);
         MixedRadixInt altNum = new MixedRadixInt(altDigits, radixes, null);
         Assertions.assertEquals(11, altNum.get());
     }
 
     @Test
     public void createWithInfinity() throws Exception {
-        List<Integer> radixes = new ArrayList<Integer>(List.of(2, 3, 4, 10000));
+        List<Integer> radixes = List.of(2, 3, 4, 10000);
         MixedRadixInt num = new MixedRadixInt(digits, radixes, null);
         Assertions.assertEquals(1 + 2*2 + 3*6 + 4*24, num.get());
     }
 
     @Test
     public void createWithError() throws Exception {
-        List<Integer> radixes = new ArrayList<Integer>(List.of(2, 3));
+        List<Integer> radixes = List.of(2, 3);
         try {
             new MixedRadixInt(digits, radixes, null);
         } catch (IllegalArgumentException ex) {
@@ -64,9 +63,9 @@ public class MixedRadixIntTest {
     
     @Test
     public void testPermutation() throws Exception {
-        List<Integer> radixes = new ArrayList<Integer>(List.of(2, 5));
-        List<Integer> digits = new ArrayList<Integer>(List.of(1, 2));
-        List<Integer> permutation = new ArrayList<Integer>(List.of(1, 0));
+        List<Integer> radixes = Arrays.asList(2, 5);
+        List<Integer> digits = Arrays.asList(1, 2);
+        List<Integer> permutation = Arrays.asList(1, 0);
         MixedRadixInt num = new MixedRadixInt(digits, radixes, permutation);
         Assertions.assertEquals(5, num.get());
         Assertions.assertEquals(2, num.get(1));
@@ -81,14 +80,14 @@ public class MixedRadixIntTest {
         Assertions.assertEquals(7, num.get());
 
         // Test radix infinity digit (effectively).
-        digits = new ArrayList<Integer>(List.of(1, 2, 1));
-        radixes = new ArrayList<Integer>(List.of(2, 5, 1000000));
+        digits = Arrays.asList(1, 2, 1);
+        radixes = Arrays.asList(2, 5, 1000000);
         num = new MixedRadixInt(digits, radixes, null);
         Assertions.assertEquals(15, num.get());
         Assertions.assertEquals(7, num.get(1));
         Assertions.assertEquals(15, num.magnitude());
         
-        permutation = new ArrayList<Integer>(List.of(1, 0, 2));
+        permutation = Arrays.asList(1, 0, 2);
         num = new MixedRadixInt(digits, radixes, permutation);
         num.increment();
         Assertions.assertEquals(17, num.get());
@@ -102,8 +101,8 @@ public class MixedRadixIntTest {
     
     @Test
     public void testIncrement() throws Exception {
-        List<Integer> radixes = new ArrayList<Integer>(List.of(2, 3));
-        List<Integer> digits = new ArrayList<Integer>(List.of(0, 2));
+        List<Integer> radixes = Arrays.asList(2, 3);
+        List<Integer> digits = Arrays.asList(0, 2);
         MixedRadixInt num = new MixedRadixInt(digits, radixes, null);
         num.increment();
         Assertions.assertEquals(5, num.get());
